--- a/Frontend/github-user-search/src/components/UserCard/UserCard.css
+++ b/Frontend/github-user-search/src/components/UserCard/UserCard.css
@@ -31,6 +31,8 @@
 
 .user-card .user-id {
   font-weight: bold;
+  overflow: hidden;
+  white-space: nowrap;
   text-overflow: ellipsis;
   margin-top: 15px;
 }
